added google verification tag

--- a/public/index.html
+++ b/public/index.html
@@ -23,7 +23,7 @@
       name="description"
       content="Web site created using create-react-app"
     />
-
+    <meta name="google-site-verification" content="Sd2111ck0vwhkOz_BQWhijGEY_blcZxxBPt_2G8DVTg" />
 
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
 
